fix: citation for background was hidden by border

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body {
     right: 10px;
 }
 #background-citation, #background-citation a{
-    color: rgb(0, 0, 133);
+    color: rgb(10, 10, 161);
     font-size: 10px;
 }
 #saturn-container{
